--- a/AppLanches/AppShell.xaml
+++ b/AppLanches/AppShell.xaml
@@ -4,12 +4,19 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:AppLanches"
+    xmlns:pages="clr-namespace:AppLanches.Pages"
     Shell.FlyoutBehavior="Disabled"
-    Title="AppLanches">
+    Shell.TabBarBackgroundColor="FloralWhite"
+    Shell.TabBarTitleColor="Red"
+    Shell.TabBarUnselectedColor="IndianRed"
+    Title="Home">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <TabBar>
+        <Tab Title="Home" Icon="home">
+            <ShellContent ContentTemplate="{DataTemplate pages:HomePage}"/>
+            
+            
+        </Tab>
+    </TabBar>
 
 </Shell>
