--- a/AppLanches/Pages/ListaProdutoPage.xaml
+++ b/AppLanches/Pages/ListaProdutoPage.xaml
@@ -5,7 +5,8 @@
              Title="ListaProdutoPage">
     <CollectionView x:Name="CvProdutos"
                  SelectionMode="Single"
-                 Margin="10">
+                 Margin="10"
+                    SelectionChanged="CvProdutos_SelectionChanged">
 
         <CollectionView.ItemsLayout>
             <GridItemsLayout Orientation="Vertical"
